[package]
name = "knowledge-component-extraction"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
indexmap = {version = "1.6.2", features=["serde-1"]}
logos = "0.12.0"
opencv = "0.53"
serde = {version = "1.0.125", features=["derive"]}
serde_json = "1.0.64"
